# R5

./: .env  .env.example  .gitignore  404.html  AGENTS.md  Makefile  README.md  application.yml  examples.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  test_config.properties
.github/workflows/: docs.yml
R5/: __init__.py  _utils.py  background.py
R5/background/: __init__.py  background.py  errors.py
R5/http/: __init__.py  errors.py  http.py  result.py
R5/ioc/: __init__.py  configuration.py  container.py  errors.py  injection.py  providers.py
api/http/: index.html
api/ioc/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md
docs/api/: background.md  http.md  ioc.md
docs/examples/: patterns.md  real-world.md  simple.md
docs/getting-started/: core-concepts.md  installation.md  quickstart.md
examples/patterns/: index.html
examples/real-world/: index.html
examples/simple/: index.html
getting-started/core-concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
scripts/: build_docs.sh  serve_docs.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/changelog/: index.html
site/contributing/: index.html
site/search/: search_index.json
tests/: conftest.py
tests/background/: test_background.py  test_background_inject.py
tests/http/: test_http.py  test_http_integration.py
tests/ioc/: conftest.py  test_configuration.py  test_container.py  test_errors.py  test_injection.py  (+1 more)
(+45 files in other folders)
